applications/scratch/frigate/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: frigate
  labels:
    app: frigate
spec:
  selector:
    app: frigate
  ports:
    - name: http
      port: 5000
      targetPort: 5000
      protocol: TCP
    - name: rtsp
      port: 8554
      targetPort: 8554
      protocol: TCP
    - name: webrtc-tcp
      port: 8555
      targetPort: 8555
      protocol: TCP
---
# WebRTC needs UDP for real-time streaming
apiVersion: v1
kind: Service
metadata:
  name: frigate-webrtc-udp
  labels:
    app: frigate
spec:
  type: NodePort
  selector:
    app: frigate
  ports:
    - name: webrtc-udp
      port: 8555
      targetPort: 8555
      protocol: UDP
      nodePort: 30855
